--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
 
 body {
-    background-image: url('Bg-image.avif');
+    background-image:url('Bg-image.avif');
     background-repeat:no-repeat;
     background-image: cover;
 }
 .formdiv{
-    background-color:indigo;
+    background-color:rebeccapurple;
+    background-image: center;
     color: white;
+    display: flex;
+    flex-direction: column;
     opacity: 0.6;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: 50px;
@@ -15,3 +18,31 @@ body {
     padding: 10px;
 }
 
+textarea{
+    background-color:none;
+    opacity: 0.2;
+    font-size: larger;
+    padding: 10px 10px;
+}
+
+input[type="name"],
+input[type="age"],
+input[type="email"] {
+  padding: 10px 10px;
+  width: 650px;
+}
+
+#dropdown {
+    display: block;
+    text-align: left;
+    padding: 10px 10px;
+    width: 650px;
+  }
+
+  button {
+    padding: 10px 10px;
+    cursor: pointer;
+    width: 565px;
+    background-color:green;
+  }
+  
